<resources>
    <string name="app_name">News Article Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="defaultText">TextView</string>
    <string name="articleImage">Article Image</string>
    <string name="title_activity_article">Article</string>
    <string name="filter">Filter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="begin_date">Begin Date</string>
    <string name="edit_begindate" />
    <string name="sort_order">Sort Order</string>
    <string name="news_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="btn_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
