<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chaibytes.newyorktimessearch.activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <TextView
        android:text="@string/begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:id="@+id/tvBeginDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_begindate"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="69dp"
        android:id="@+id/etBegindate"
        tools:ignore="RelativeOverlap"
        android:focusable="false"/>

    <TextView
        android:text="@string/sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etBegindate"
        android:layout_alignRight="@+id/tvBeginDate"
        android:layout_alignEnd="@+id/tvBeginDate"
        android:layout_marginTop="65dp"
        android:id="@+id/tvSortOrder" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/etBegindate"
        android:layout_alignStart="@+id/etBegindate"
        android:id="@+id/spSortOrder"
        android:entries="@array/options"/>

    <TextView
        android:text="@string/news_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_marginTop="71dp"
        android:id="@+id/tvNewsDeskValues" />

    <CheckBox
        android:text="@string/arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvNewsDeskValues"
        android:layout_toRightOf="@id/tvNewsDeskValues"
        android:layout_toEndOf="@id/tvNewsDeskValues"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:id="@+id/cbArts"
        android:layout_alignTop="@+id/tvNewsDeskValues" />

    <CheckBox
        android:text="@string/fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cbArts" />

    <CheckBox
        android:text="@string/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbSports"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:layout_below="@+id/cbFashion" />

    <Button
        android:text="@string/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSports"
        android:layout_toRightOf="@+id/tvSortOrder"
        android:layout_toEndOf="@+id/tvSortOrder"
        android:layout_marginTop="20dp"
        android:id="@+id/btnSave" />

</RelativeLayout>
